; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_mktitanimg.c_cs_read_sum.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_mktitanimg.c_cs_read_sum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @cs_read_sum(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [8 x i8], align 1
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @SEEK_END, align 4
  %6 = call i32 @fseek(i32* %4, i32 -8, i32 %5)
  %7 = getelementptr inbounds [8 x i8], [8 x i8]* %3, i64 0, i64 0
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @fread(i8* %7, i32 8, i32 1, i32* %8)
  %10 = getelementptr inbounds [8 x i8], [8 x i8]* %3, i64 0, i64 4
  %11 = bitcast i8* %10 to i64*
  %12 = load i64, i64* %11, align 1
  ret i64 %12
}

declare dso_local i32 @fseek(i32*, i32, i32) #1

declare dso_local i32 @fread(i8*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
